# immutable-python

./: README.md  pyproject.toml
tests/: .test_module.py.swp  module.py  test_module.py
